new component added

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,6 +9,8 @@
   "author": "Sunil More",
   "license": "ISC",
   "dependencies": {
+    "ag-grid": "^18.1.2",
+    "ag-grid-react": "^23.0.3",
     "react": "^16.13.1"
   }
 }
