--- a/packages/utility/package.json
+++ b/packages/utility/package.json
@@ -10,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.13.1"
-  }
+  },
+  "gitHead": "942400d27fd73c70299857eec823f4dd9e3c0ab7"
 }
