--- a/packages/utility/package.json
+++ b/packages/utility/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "react": "^16.13.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "gitHead": "352a80f26aedf5a5e76578595fa85fa86dbc718e"
 }
